# imgopt

imgopt/: hessian.py  hessian2.py  imgopt.py  solver.py
julia/: creator.jl  discriminate.jl  test.jl
libimgopt/: CMakeLists.txt
libimgopt/include/imgopt/: signal_network.h  util.h
libimgopt/src/: imgopt.c  node.cpp  signal_network.c  thpool.c  util.c
libimgopt/src/script/: test_plplot.c
networkpy/: main.py
